--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.1.0",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.22.1",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "bootstrap-daterangepicker": "^3.0.5",
+        "chart.js": "^2.8.0",
+        "datatables.net-bs": "^1.10.19",
+        "vuex": "^3.1.1"
     }
 }
