--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "datatables.net-bs": "^1.10.19",
         "datatables.net-buttons": "^1.5.6",
         "datatables.net-buttons-bs4": "^1.5.6",
+        "datatables.net-select": "^1.3.0",
+        "datatables.net-select-bs4": "^1.3.0",
         "jszip": "^3.2.2",
         "laravel-vue-pagination": "^2.3.0",
         "material-design-lite": "^1.3.0",
