--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,20 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.1.3",
+    "php": "^7.2",
     "doctrine/dbal": "^2.9",
     "doctrine/lexer": "1.0.x-dev",
     "fideloper/proxy": "^4.0",
-    "laravel/framework": "5.8.*",
+    "laravel/framework": "^6.3",
     "laravel/tinker": "^1.0"
   },
   "require-dev": {
     "beyondcode/laravel-dump-server": "^1.0",
-    "filp/whoops": "^2.0",
+    "filp/whoops": "^2.5",
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
     "nunomaduro/collision": "^3.0",
-    "phpunit/phpunit": "^7.5"
+    "phpunit/phpunit": "^8.0"
   },
   "config": {
     "optimize-autoloader": true,
