--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,17 @@
   "license": "MIT",
   "require": {
     "php": "^7.2",
+    "ext-curl": "*",
     "doctrine/dbal": "^2.9",
     "doctrine/lexer": "1.0.x-dev",
+    "facebook/webdriver": "^1.7",
     "fideloper/proxy": "^4.0",
     "laravel/framework": "^6.3",
-    "laravel/tinker": "^1.0"
+    "laravel/telescope": "^2.1",
+    "laravel/tinker": "^1.0",
+    "maatwebsite/excel": "^3.1",
+    "phpoffice/phpexcel": "^1.8",
+    "se/selenium-server-standalone": "^3.12"
   },
   "require-dev": {
     "beyondcode/laravel-dump-server": "^1.0",
