--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,19 @@
   "require": {
     "php": "^7.2",
     "ext-curl": "*",
+    "aws/aws-sdk-php": "~3.0",
     "doctrine/dbal": "^2.9",
     "doctrine/lexer": "1.0.x-dev",
     "facebook/webdriver": "^1.7",
     "fideloper/proxy": "^4.0",
+    "guzzlehttp/guzzle": "^6.5",
     "laravel/framework": "^6.3",
     "laravel/telescope": "^2.1",
     "laravel/tinker": "^1.0",
     "maatwebsite/excel": "^3.1",
+    "pda/pheanstalk": "~4.0",
     "phpoffice/phpexcel": "^1.8",
+    "predis/predis": "~1.0",
     "se/selenium-server-standalone": "^3.12"
   },
   "require-dev": {
