--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
+        "lodash": "^4.17.15",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.22.1",
@@ -25,6 +25,12 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fullcalendar/core": "^4.4.0",
+        "@fullcalendar/daygrid": "^4.4.0",
+        "@fullcalendar/interaction": "^4.4.0",
+        "@fullcalendar/resource-common": "^4.4.0",
+        "@fullcalendar/resource-timeline": "^4.4.0",
+        "@fullcalendar/timeline": "^4.4.0",
         "bootstrap-daterangepicker": "^3.0.5",
         "chart.js": "^2.8.0",
         "datatables.net-bs": "^1.10.19",
