--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-/node_modules
-/public/hot
-/public/storage
-/public/css
-/public/js/helper.js
-/public/plugins/*
-/public/mix-manifest.json
-/storage/*.key
-/vendor
+node_modules
+public/hot
+public/storage
+public/css
+public/js/helper.js
+public/plugins/*
+public/mix-manifest.json
+storage/*.key
+vendor
 .env
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/public/js/app.js
-/.idea/*
+public/js/app.js
+.idea
