bonus review 增加個人業績檢視圖表

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-/node_modules
-/public/css
+node_modules
+public/css
 public/js/app.js
-/public/storage
-/public/js/helper.js
-/public/plugins/*
-/public/mix-manifest.json
-/vendor
+public/storage
+public/js/helper.js
+public/plugins/*
+public/mix-manifest.json
+vendor
 .env
 phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/.idea
+.idea
