--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@fullcalendar/timeline": "^4.4.0",
         "bootstrap-daterangepicker": "^3.0.5",
         "chart.js": "^2.8.0",
+        "chartjs-plugin-labels": "^1.1.0",
         "datatables.net-bs": "^1.10.19",
         "datatables.net-buttons": "^1.5.6",
         "datatables.net-buttons-bs4": "^1.5.6",
