--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.15",
         "popper.js": "^1.12",
@@ -31,6 +31,7 @@
         "@fullcalendar/resource-common": "^4.4.0",
         "@fullcalendar/resource-timeline": "^4.4.0",
         "@fullcalendar/timeline": "^4.4.0",
+        "@vue/composition-api": "^0.6.4",
         "bootstrap-daterangepicker": "^3.0.5",
         "chart.js": "^2.8.0",
         "chartjs-plugin-datalabels": "^0.7.0",
