--- a/.drone.yml
+++ b/.drone.yml
@@ -14,10 +14,10 @@ pipeline:
         target: username
     port: 22
     script:
-      - docker exec -i php74 php ./dataanalysiscontrol/artisan down
-      - docker exec -i php74 bash -c "git -C dataanalysiscontrol pull"
-      - docker exec -i php74 bash -c "cd dataanalysiscontrol && composer install && npm install -y && npm run dev"
-      - docker exec -i php74 php ./dataanalysiscontrol/artisan up
+      - docker exec -i php74 php ./${PROJECT}/artisan down
+      - docker exec -i php74 bash -c "git -C ${PROJECT} pull"
+      - docker exec -i php74 bash -c "cd ${PROJECT} && composer install && npm install -y && npm run dev"
+      - docker exec -i php74 php ./${PROJECT}/artisan up
     when:
       status: [ success ]
   notification:
