--- a/.drone.yml
+++ b/.drone.yml
@@ -15,10 +15,10 @@ pipeline:
       - source: project
     port: 22
     script:
-      - docker exec -i php74 php ./${PROJECT}/artisan down
-      - docker exec -i php74 bash -c "git -C ${PROJECT} pull"
-      - docker exec -i php74 bash -c "cd ${PROJECT} && composer install && npm install -y && npm run dev"
-      - docker exec -i php74 php ./${PROJECT}/artisan up
+      - docker exec -i php74 php ./$PROJECT/artisan down
+      - docker exec -i php74 bash -c "git -C $PROJECT pull"
+      - docker exec -i php74 bash -c "cd $PROJECT && composer install && npm install -y && npm run dev"
+      - docker exec -i php74 php ./$PROJECT/artisan up
     when:
       status: [ success ]
   notification:
