--- a/.drone.yml
+++ b/.drone.yml
@@ -24,3 +24,5 @@ pipeline:
   notification:
     image: appleboy/drone-discord
     secrets: [ discord_webhook_id,discord_webhook_token ]
+    when:
+      statue: [ failure,success ]
