--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,7 @@ pipeline:
       - source: user
         target: username
       - source: project
+        target: project
     port: 22
     script:
       - docker exec -i php74 php ./$PROJECT/artisan down
