--- a/.drone.yml
+++ b/.drone.yml
@@ -13,10 +13,9 @@ pipeline:
       - source: user
         target: username
       - source: project
-        target: project
     port: 22
     script:
-      - echo ${PROJECT}
+      - echo $PROJECT
 #      - docker exec -i php74 php ./${PROJECT}/artisan down
 #      - docker exec -i php74 bash -c "git -C ${PROJECT} pull"
 #      - docker exec -i php74 bash -c "cd ${PROJECT} && composer install && npm install -y && npm run dev"
