--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ pipeline:
         target: project
     port: 22
     script:
-      - echo $HOST
+      - echo $HOST && echo $USERNAME && echo $PROJECT && echo $HOST_IP
 #      - docker exec -i php74 php ./${PROJECT}/artisan down
 #      - docker exec -i php74 bash -c "git -C ${PROJECT} pull"
 #      - docker exec -i php74 bash -c "cd ${PROJECT} && composer install && npm install -y && npm run dev"
