--- a/.drone.yml
+++ b/.drone.yml
@@ -5,10 +5,10 @@ pipeline:
   ssh-commands:
     image: appleboy/drone-ssh
     settings:
-    secrets: [ ssh_key,host,username,project]
+    secrets: [ ssh_key,host,username,test64]
     port: 22
     script:
-      - echo $USERNAME && echo $PROJECT
+      - echo $USERNAME && echo $TEST64
 #      - docker exec -i php74 php ./${PROJECT}/artisan down
 #      - docker exec -i php74 bash -c "git -C ${PROJECT} pull"
 #      - docker exec -i php74 bash -c "cd ${PROJECT} && composer install && npm install -y && npm run dev"
