--- a/.drone.yml
+++ b/.drone.yml
@@ -5,14 +5,10 @@ pipeline:
   ssh-commands:
     image: appleboy/drone-ssh
     settings:
-    secrets: [ ssh_key,host,username,test64]
+    secrets: [ ssh_key,host,username]
     port: 22
     script:
-      - echo $USERNAME && echo $TEST64
-#      - docker exec -i php74 php ./${PROJECT}/artisan down
-#      - docker exec -i php74 bash -c "git -C ${PROJECT} pull"
-#      - docker exec -i php74 bash -c "cd ${PROJECT} && composer install && npm install -y && npm run dev"
-#      - docker exec -i php74 php ./${PROJECT}/artisan up
+      - sh project-update.sh
     when:
       status: [ success ]
   notification:
