--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ pipeline:
     secrets: [ ssh_key,host,username]
     port: 22
     script:
-      - docker exec -i php74 php ./${DRONE_REPO}/artisan down
+      - docker exec -i php74 php ./${PROJECT}/artisan down
       - docker exec -i php74 bash -c "git -C ${DRONE_REPO} pull"
       - docker exec -i php74 bash -c "cd ${DRONE_REPO} && composer install && npm install -y && npm run dev"
       - docker exec -i php74 php ./${DRONE_REPO}/artisan up
