--- a/.drone.yml
+++ b/.drone.yml
@@ -8,10 +8,10 @@ pipeline:
     secrets: [ ssh_key,host,username]
     port: 22
     script:
-      - docker exec -i php74 php ./${PROJECT}/artisan down
-      - docker exec -i php74 bash -c "git -C ${DRONE_REPO} pull"
-      - docker exec -i php74 bash -c "cd ${DRONE_REPO} && composer install && npm install -y && npm run dev"
-      - docker exec -i php74 php ./${DRONE_REPO}/artisan up
+      - docker exec -i php74 php ./${DRONE_REPO_NAME}/artisan down
+      - docker exec -i php74 bash -c "git -C ${DRONE_REPO_NAME} pull"
+      - docker exec -i php74 bash -c "cd ${DRONE_REPO_NAME} && composer install && npm install -y && npm run dev"
+      - docker exec -i php74 php ./${DRONE_REPO_NAME}/artisan up
     when:
       status: [ success ]
   notification:
