--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/telescope": "^3.5",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "marvinlabs/laravel-discord-logger": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
