--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ pipeline:
     port: 22
     script:
       - docker exec -i php74 php ./${DRONE_REPO_NAME}/artisan down
+      - docker exec -i php74 bash -c "git -C ${DRONE_REPO_NAME} checkout . && git -C ${DRONE_REPO_NAME} reset --hard"
       - docker exec -i php74 bash -c "git -C ${DRONE_REPO_NAME} pull"
       - docker exec -i php74 bash -c "cd ${DRONE_REPO_NAME} && composer install && npm install -y && npm run dev"
       - docker exec -i php74 php ./${DRONE_REPO_NAME}/artisan up
