--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ pipeline:
       - docker exec -i php74 php ./${DRONE_REPO_NAME}/artisan down
       - docker exec -i php74 bash -c "git -C ${DRONE_REPO_NAME} checkout . && git -C ${DRONE_REPO_NAME} reset --hard"
       - docker exec -i php74 bash -c "git -C ${DRONE_REPO_NAME} pull"
-      - docker exec -i php74 bash -c "cd ${DRONE_REPO_NAME} && composer install && npm install -y && npm run dev"
+      - docker exec -i php74 bash -c "cd ${DRONE_REPO_NAME} && composer update && npm install -y && npm run dev"
       - docker exec -i php74 php ./${DRONE_REPO_NAME}/artisan up
     when:
       status: [ success ]
