--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.3.0",
+        "laravel/framework": "~8.3.0",
         "laravel/passport": "^10.0",
         "laravel/telescope": "^4.0",
         "laravel/tinker": "^2.0",
